--- a/css/style.css
+++ b/css/style.css
@@ -43,10 +43,8 @@ body{
 
 .conteudo{
     margin-bottom: 48px;
-    border-top: 0.4px solid #fff;
+    border-top: 0.4px solid rgb(156, 154, 154);
 }
-
-
 
 .conteudo-principal{
     display: flex;
@@ -88,10 +86,18 @@ body{
     color: #000;
 }
 
+.conteudo-principal-botao:hover{
+    background-color: rgba(165, 160, 157, 0.53);
+}
+
 .conteudo-principal-imagem{
-    height: 400px;
-    margin: 10px;
-    border-radius: 400px 50px 50px 50px;
+    height: 350px;
+    margin: 40px;
+    border-radius: 20px 20px 20px 20px;
+}
+
+.conteudo-principal-imagem:hover{
+    opacity: 50%;
 }
 
 .conteudo-secundario{
@@ -99,11 +105,11 @@ body{
     flex-direction: column;
     align-items: center;
     gap: 24px;
-    margin-top: 48px;
+    margin-top: 40px;
 }
 
 .conteudo-secundario-titulo{
-    border-top: 0.4px solid #fff;
+    border-top: 0.4px solid rgb(156, 154, 154);
     padding-top: 48px;
     font-family: 'Source Sans Pro', sans-serif;
     font-weight: 400px;
@@ -117,6 +123,17 @@ body{
     font-weight: 300;
     font-size: 18px;
     color: #fff;
+}
+
+.rodape{
+    padding: 32px;
+    border-top: 0.4px solid rgb(156, 154, 154);
+}
+
+.rodape-imagem{
+    height: 65px;
+    display: block;
+    margin: 0 auto;
 }
 
 
